[package]
name = "aoc2022rust"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = ">=0.10.1"
regex = ">=1.10.2"
lazy_static = ">=1.4.0"
lazy-regex = ">=3.1.0"
grid = "0.9.0" # 0.12.0 has incompatible changes
num = ">=0.4.0"
fnv = ">=1.0.7"
quote = ">=1.0.25"
clap = { version = ">=4.*", features = ["derive"] }
queues = ">=1.0.2"
rayon = ">=1.8.0"
